--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,12 +1,9 @@
 name: GitHub Pages
 
-on:
-  push:
-    branches:
-      - main  # Set a branch to deploy
-  pull_request:
+on: [push]
 
-permission: write
+permissions:
+  contents: write
 
 jobs:
   deploy:
