--- a/docs/hugo.toml
+++ b/docs/hugo.toml
@@ -1,6 +1,6 @@
 baseURL = 'https://example.org/'
 languageCode = 'en-us'
-title = 'My New Hugo Site'
+title = 'typst-posters'
 theme = "docs"
 
 [[menus.main]]
