allow html in markup

--- a/docs/hugo.toml
+++ b/docs/hugo.toml
@@ -29,3 +29,8 @@ weight = 25
 name = 'Showcase'
 pageRef = '/showcase'
 weight = 30
+
+[markup]
+    [markup.goldmark]
+        [markup.goldmark.renderer]
+            unsafe = true
