correctly specify MIT license in config file and insert homepage

--- a/typst.toml
+++ b/typst.toml
@@ -2,7 +2,9 @@
 name = "typst-posters"
 version = "0.1.0"
 authors = ["Jonas Pleyer<jonas.sci@pleyer.org>"]
-license = "MIT-0"
+license = "MIT"
 description = "Create scientific posters in Typst."
 entrypoint = "lib.typ"
 repository = "https://github.com/jonaspleyer/typst-posters"
+homepage = "https://jonaspleyer.github.io/typst-posters/"
+
