--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -20,7 +20,7 @@ jobs:
         uses: peaceiris/actions-hugo@v2
         with:
           hugo-version: '0.119.0'
-          # extended: true
+          extended: true
 
       - name: Build
         run: hugo --minify --source docs
