--- a/typst.toml
+++ b/typst.toml
@@ -1,12 +1,12 @@
 [package]
-name = "science-posters"
+name = "peace-of-poster"
 version = "0.3.0"
 authors = ["Jonas Pleyer<jonas.sci@pleyer.org>"]
 license = "MIT"
 description = "Create scientific posters in Typst."
 entrypoint = "lib.typ"
-repository = "https://github.com/jonaspleyer/science-posters"
-homepage = "https://jonaspleyer.github.io/science-posters/"
+repository = "https://github.com/jonaspleyer/peace-of-posters"
+homepage = "https://jonaspleyer.github.io/peace-of-poster/"
 categories = ["poster"]
 
 [template]
