--- a/docs/hugo.toml
+++ b/docs/hugo.toml
@@ -7,6 +7,7 @@ theme = "hugo-book"
 author = "Jonas Pleyer"
 author_mail = "jonas.sci@pleyer.org"
 BookSection = '.'
+BookLogo = 'favicon.svg'
 
 [markup.goldmark.renderer]
 unsafe = true
