correct name of package

--- a/typst.toml
+++ b/typst.toml
@@ -1,5 +1,5 @@
 [package]
-name = "peace-of-poster"
+name = "peace-of-posters"
 version = "0.3.0"
 authors = ["Jonas Pleyer<jonas.sci@pleyer.org>"]
 license = "MIT"
