--- a/docs/hugo.toml
+++ b/docs/hugo.toml
@@ -6,7 +6,7 @@ theme = "hugo-book"
 [params]
 author = "Jonas Pleyer"
 author_mail = "jonas.sci@pleyer.org"
-BookSection = '.'
+BookSection = '*'
 BookLogo = 'favicon.svg'
 
 [markup.highlight]
